# money-growth

./: .gitignore  README.md  data-plotting.ipynb  data-preparation.ipynb  data_preparation.py  money-aggretates-comparison.ipynb  money-growth.ipynb  pyproject.toml  requirements.txt  utils.py
data/: cpi-gb.csv  cpi-jp.csv  gdp-gb.csv  jp-cpi-e-stat.csv  m3-jp.csv
figures/: broad-vs-narrow-money.eps  ch-magnitudes.eps  ch-markov-cpi.eps  ch-markov-v.eps  eu-magnitudes.eps  eu-markov-cpi.eps  eu-markov-v.eps  inflation.eps  jp-magnitudes.eps  jp-markov-cpi.eps  jp-markov-v.eps  magnitudes-ch.eps  magnitudes-eu.eps  magnitudes-jp.eps  magnitudes-uk.eps  magnitudes-us.eps  markov-cpi-ch.eps  markov-cpi-eu.eps  markov-cpi-jp.eps  markov-cpi-uk.eps  markov-cpi-us.eps  markov-v-ch.eps  markov-v-eu.eps  markov-v-jp.eps  markov-v-uk.eps  markov-v-us.eps  money-supply.eps  uk-magnitudes.eps  uk-markov-cpi.eps  uk-markov-v.eps  us-magnitudes.eps  us-markov-cpi.eps  us-markov-v.eps
scripts/: data_plotting.py  money_aggregates_comparison.py  money_growth.py
