[project]
name = "money-growth"
version = "0.1.0"
description = "Quantitative analysis to discover money growth influence on inflation"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fredapi>=0.5.2",
    "matplotlib>=3.10.3",
    "pandas>=2.3.0",
    "python-dotenv>=1.1.0",
    "requests>=2.32.3",
    "scipy>=1.15.3",
    "statsmodels>=0.14.4",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
    "ruff>=0.11.13",
]
